@@ -140,11 +140,3 @@ class Settings(serializable.Serializable):
        else:
            raise AttributeError, name
 
-if __name__ == "__main__":
-    # used to save a settings file to /var/lib/cobbler/settings, for purposes of
-    # including a new updated settings file in the RPM without remembering how
-    # to format lots of YAML.
-    import yaml
-    print yaml.dump(DEFAULTS)
-
- 
